--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "moment": "^2.24.0",
+    "socket.io-client": "^2.2.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-socket.io": "^3.0.7",
+    "vue-toasted": "^1.1.27",
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.1.1",
+    "bulma": "^0.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -18,7 +27,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "css-loader": "^2.1.0"
   },
   "eslintConfig": {
     "root": true,
@@ -29,7 +41,10 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-debugger": 0,
+      "no-console": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
